--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dolnpm/svg-icon",
-  "version": "0.1.2-development",
+  "version": "0.1.3-development",
   "description": "If you're using vector graphics (SVG) as icons, then this React component will be useful.",
   "main": "lib/index.js",
   "module": "es/index.js",
@@ -21,9 +21,9 @@
     "travis-deploy-once": "travis-deploy-once"
   },
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.3.2",
-    "@dolnpm/link-extractor": "0.1.0-development"
+    "prop-types": "*",
+    "react": "*",
+    "@dolnpm/link-extractor": "*"
   },
   "devDependencies": {
     "nwb": "0.23.x",
@@ -33,7 +33,10 @@
     "babel-loader": "^7.1.5",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.5.0"
+    "babel-preset-stage-0": "^6.5.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.3.2",
+    "@dolnpm/link-extractor": "0.1.0-development"
   },
   "author": "Alex Dollery (DolNpm/DolGit)",
   "homepage": "",
